syntax = "proto2";

option java_package="com.common.model.protobuf";
option java_outer_classname = "BaseData10";

//核心业务指令-进场汇报指令-请求对象
message A110
{
    required int32 parking_id=2;//停车场编号
    required string clientSerial=3;//进场流水号
    required int32 wayNo=4; //通道编号
    required string wayName=5; //通道名称
    required string license=6;//车牌号码
    required string inTime=7; //入场时间
    required int32 carClass=8;//车类型
    required int32 carType=9;//车型
    required int32 totalBerthCount=10;//总车位数
    required int32 emptyBerthCount=11;//空车位数
    required int32 inOpen=12;//进场放行方式：0其它方式、1自动识别开闸、2（车主APP或微信）扫码开闸进场、3（管理员PDA或管理）远程控制开闸进场、4（管理员岗亭）控制开闸进场、20取卡进场
    required string openSerial=13;//开闸放行流水(2和3有效)
}
//核心业务指令-进场汇报指令-应答对象
message B110
{
}
